--- a/index.html
+++ b/index.html
@@ -1,12 +1,19 @@
+<!DOCTYPE html>
 <html>
   <head>
     <title>
-    J_128 | Home Page
+      J_128 | Home Page
     </title>
-  </head
+  </head>
   <body>
-    <div align=center>
+    <div align=center style="width:3000px;height:3000px;">
       <h1>Work In Progress</h1>
     </div>
+    <div align=center>
+      <h1>J_128's home page</h1>
+      <h4>Welcome!</h4>
+    </div>
+    <hr length=25>
+    
   </body>
 </html>
