--- a/index.html
+++ b/index.html
@@ -4,10 +4,19 @@
     <title>
       J_128 | Home Page
     </title>
+    <meta charset="UTF-8">
+    <meta name="description" content="J-128's Home Page">
+    <meta name="keywords" content="J-128,J.D.,Supertux">
+    <meta name="author" content="J-128">
   </head>
   <body>
     <div align=center>
-      <h1>Work In Progress</h1>
+      <h1>J-128's Home Page</h1>
     </div>
+    <hr>
+    <h3>A sample post</h3>
+    <p>This is a sample post in a sample site wrote by a sample person on the sample chair with the 
+      sample computer(i386) and so on!
+    </p>
   </body>
 </html>
