--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
       J_128 | Home Page
     </title>
   </head>
-  <body>
+  <body style="background-image:radial-gradient(closest-corner, #5a0000, #ff4600, #000000)>
     <div align=center>
-      <h1>Work In Progress</h1>
+      <h1>Currently a CSS testing ground</h1>
       <hr>
     </div>
   </body>
