--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
       J_128 | Home Page
     </title>
   </head>
-  <body style="background-image:radial-gradient(circle, closest-corner, #5a0000, #ff4600, #000000)">
+  <body style="background-image:radial-gradient(circle, closest-corner, #5a0000, #ff4600, #000000);">
     <div align=center>
       <h1>Currently a CSS testing ground</h1>
       <hr>
