--- a/index.html
+++ b/index.html
@@ -4,8 +4,14 @@
     <title>
       J_128 | Home Page
     </title>
+    <style>
+      #bkg {
+        width: 100%;
+        background-image: radial-gradient(circle, closest-corner, #5a0000, #ff4600, #000000);
+      }
+    </style>
   </head>
-  <body style="background-image:radial-gradient(circle, closest-corner, #5a0000, #ff4600, #000000);">
+  <body id=bkg>
     <div align=center>
       <h1>Currently a CSS testing ground</h1>
       <hr>
