--- a/index.html
+++ b/index.html
@@ -11,10 +11,12 @@
       }
     </style>
   </head>
-  <body id=bkg>
-    <div align=center>
-      <h1>Currently a CSS testing ground</h1>
-      <hr>
+  <body>
+    <div id="bkg">
+      <div align=center>
+        <h1>Currently a CSS testing ground</h1>
+        <hr>
+      </div>
     </div>
   </body>
 </html>
