--- a/index.html
+++ b/index.html
@@ -6,13 +6,13 @@
     </title>
     <style>
       #bkg {
-        width: 100%;
-        background-image: radial-gradient(circle, closest-corner, #5a0000, #ff4600, #000000);
+        min-height:100vw;
+        background-image: radial-gradient(circle closest-corner, #5a0000, #ff4600, #000000);
       }
     </style>
   </head>
-  <body>
-    <div id="bkg">
+  <body id=bkg>
+    <div>
       <div align=center>
         <h1>Currently a CSS testing ground</h1>
         <hr>
