--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     </title>
     <style>
       #bkg {
-        min-height:100vw;
+        min-height:100vh;
         background-image: radial-gradient(circle closest-corner, #5a0000, #ff4600, #000000);
       }
     </style>
