--- a/index.html
+++ b/index.html
@@ -20,6 +20,6 @@
       <h1>Currently a CSS testing ground</h1>
       <hr>
     </div>
-    <div id=ring></div>
+    <div id=ring align="center"></div>
   </body>
 </html>
