--- a/index.html
+++ b/index.html
@@ -11,8 +11,9 @@
       }
       #ring {
         height:50vh;
+        width:50vh;
         border-radius: 50%;
-        background-image: radial-gradient(circle farthest-side, rgba(128, 128, 32, 0) 89%, #7f7f1f 90%, #cfff7f 95%, #ffffdf 97%, #ff801a 99%, rgba(255, 129, 26, 0) 100%)
+        background-image: radial-gradient(circle farthest-side, rgba(128, 128, 32, 0) 89%, #7f7f1f 90%, #cfff7f 95%, #ffffdf 97%, #ff801a 99%, rgba(255, 129, 26, 0) 100%);
     </style>
   </head>
   <body id=bkg>
