--- a/index.html
+++ b/index.html
@@ -12,8 +12,9 @@
       #ring {
         height:50vh;
         width:50vh;
+        align:center;
         border-radius: 50%;
-        background-image: radial-gradient(circle farthest-side, rgba(128, 128, 32, 0) 89%, #7f7f1f 90%, #cfff7f 95%, #ffffdf 97%, #ff801a 99%, rgba(255, 129, 26, 0) 100%);
+        background-image: radial-gradient(circle farthest-side, rgba(128, 128, 32, 0) 89%, #7f7f1f 90%, #cfff7f 95%, #ffffdf 97%, #ffc81a 99%, rgba(255, 200, 26, 0) 100%);
     </style>
   </head>
   <body id=bkg>
@@ -21,6 +22,6 @@
       <h1>Currently a CSS testing ground</h1>
       <hr>
     </div>
-    <div id=ring align="center"></div>
+    <div id=ring></div>
   </body>
 </html>
