--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         width:50vh;
         align:center;
         border-radius: 50%;
-        background-image: radial-gradient(circle farthest-side, rgba(128, 128, 32, 0) 89%, #7f7f1f 90%, #7f7f1f 95%, #cfff7f 97%, #ffffdf 99%, rgba(255, 200, 26, 0) 100%);
+        background-image: radial-gradient(circle farthest-side, rgba(128, 128, 32, 0) 89%, #7f7f1f 90%, #7f7f1f, #cfff7f, #ffffdf, rgba(255, 200, 26, 0));
     </style>
   </head>
   <body id=bkg>
