--- a/index.html
+++ b/index.html
@@ -12,9 +12,8 @@
       #ring {
         height:50vh;
         width:50vh;
-        align:center;
         border-radius: 50%;
-        background-image: radial-gradient(circle farthest-side, rgba(128, 128, 32, 0) 89%, #7f7f1f 90%, #7f7f1f, #cfff7f, #ffffdf, rgba(255, 200, 26, 0));
+        background-image: radial-gradient(circle farthest-side, rgba(128, 128, 32, 0) 89%, #7f7f1f 90%, #7f7f1f, #cfff7f, #ffffdf, rgba(255, 200, 26, 0) 10%);
     </style>
   </head>
   <body id=bkg>
@@ -22,6 +21,6 @@
       <h1>Currently a CSS testing ground</h1>
       <hr>
     </div>
-    <div id=ring></div>
+    <div align=center id=ring></div>
   </body>
 </html>
