--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         height:50vh;
         width:50vh;
         border-radius: 50%;
-        background-image: radial-gradient(circle farthest-side, rgba(128, 128, 32, 0) 89%, #7f7f1f 90%, #7f7f1f, #cfff7f, #ffffdf, rgba(255, 200, 26, 0) 10%);
+        background-image: radial-gradient(circle farthest-side, rgba(0, 0, 0, 0) 70%, #7f7f1f 75%, #7f7f1f 80%, #cfff7f, #ffffdf, #ffc81f, rgba(255, 200, 26, 0) 100%);
     </style>
   </head>
   <body id=bkg>
@@ -21,6 +21,8 @@
       <h1>Currently a CSS testing ground</h1>
       <hr>
     </div>
-    <div align=center id=ring></div>
+    <div align=center>
+      <div id=ring></div>
+    </div>
   </body>
 </html>
