--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         height:50vh;
         width:50vh;
         border-radius: 50%;
-        background-image: radial-gradient(circle farthest-side, rgba(0, 0, 0, 0) 70%, #7f7f1f 75%, #7f7f1f 80%, #cfff7f, #ffffdf, #ffc81f, rgba(255, 200, 26, 0) 100%);
+        background-image: radial-gradient(circle farthest-side, rgba(0, 0, 0, 0) 74%, #7f7f1f 75%, #7f7f1f 80%, #cfff7f 82%, #ffffcf 85%, #ffc81f 88%, #ffc81f 93%, rgba(255, 200, 26, 0) 95%);
     </style>
   </head>
   <body id=bkg>
